fix bug scrollbar task

--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,13 @@
 .dragging {
     @apply opacity-50;
 }
+
+/* Sembunyikan scrollbar tapi tetap berfungsi */
+.hide-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+    display: none;
+}
